@@ -15,4 +15,14 @@ $ACLOCAL || exit 1
 $AUTOMAKE || exit 1
 len="`grep '^srcdir' Makefile.in | wc -l`"
 echo "len = $len"
-test $len -eq 1
+test $len -eq 1 || exit 1
+
+# Also make sure include file is distributed.
+(sed -n -e '/^DIST_COMMON =.*\\$/ {
+   :loop
+   p
+   n
+   /\\$/ b loop
+   p
+   n
+   }' -e '/^DIST_COMMON =/ p' Makefile.in | grep foo)
